--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -70,13 +70,9 @@ auth:
       client-name: acs-insight-connector
     alfresco:
       type: basic
-      username: admin
-      password: admin
+      username:
+      password:
   retry:
     attempts: 10
     initial-delay: 500
     delay-multiplier: 2
-
-logging:
-  level:
-    org.alfresco: DEBUG
