ACS-8363: Adding User-Agent header to HxI API calls in live-ingester

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 application:
   source-id: alfresco-dummy-source-id-0a63de491876
-  version: @project.version@
+  version: "@project.version@"
 
 spring:
   main:
