--- a/distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
@@ -149,6 +149,8 @@ services:
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_CLIENT-SECRET: dummy-client-secret
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_ENVIRONMENT-KEY: hxai-env-key
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_TOKEN-URI: http://hxinsight-mock:8080/token
+      AUTH_PROVIDERS_ALFRESCO_USERNAME: admin
+      AUTH_PROVIDERS_ALFRESCO_PASSWORD: admin
     ports:
       - "5007:5007"
 
