--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <pdfbox.version>3.0.2</pdfbox.version>
         <aws-sdk-s3.version>2.26.20</aws-sdk-s3.version>
         <wiremock.version>3.8.0</wiremock.version>
+        <system-stubs.version>2.1.6</system-stubs.version>
 
         <testcontainers.version>1.19.8</testcontainers.version>
         <wiremock-testcontainers-module.version>1.0-alpha-13</wiremock-testcontainers-module.version>
@@ -270,6 +271,11 @@
                 <groupId>org.wiremock</groupId>
                 <artifactId>wiremock</artifactId>
                 <version>${wiremock.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.org.webcompere</groupId>
+                <artifactId>system-stubs-jupiter</artifactId>
+                <version>${system-stubs.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
