--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -16,6 +16,6 @@ hxi.auth.retry.attempts=3
 hxi.auth.retry.initial-delay=500
 hxi.auth.retry.delay-multiplier=2
 
-hxi.client.baseUrl=http://localhost:8001
+hxi.client.base-url=http://localhost:8001
 
 hxi.question.max-context-size-for-question=100
