ACS-8363: Fixing docker compose setup
Co-authored-by: Krystian Dabrowski <98942253+krdabrowski@users.noreply.github.com>

--- a/distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
@@ -41,7 +41,7 @@ services:
         -Dcsrf.filter.enabled=false
         -Dalfresco.restApi.basicAuthScheme=true
         -Xms1500m -Xmx1500m
-        -Dhxi.client.baseUrl=http://hxinsight-mock:8080
+        -Dhxi.client.base-url=http://hxinsight-mock:8080
         -Dhxi.auth.providers.hyland-experience.token-uri=http://hxinsight-mock:8080/token
         "
     ports:
