--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -70,7 +70,7 @@
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
-            <artifactId>acs-event-model</artifactId>
+            <artifactId>acs-enterprise-event-model</artifactId>
         </dependency>
 
         <dependency>
