--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>alfresco-hxinsight-connector-common</artifactId>
     <packaging>jar</packaging>
 
+    <properties>
+        <maven.build.sourceVersion>11</maven.build.sourceVersion>
+        <maven.build.targetVersion>11</maven.build.targetVersion>
+        <maven.compiler.testRelease>17</maven.compiler.testRelease>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
