--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v5.33.0
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v5.33.0
-      - uses: Alfresco/ya-pmd-scan@5cfcc5afef1163d4aeb57a3576bc461dbaa6d6c6
+      - uses: Alfresco/ya-pmd-scan@v4.0.0
         with:
           pmd-ruleset-ref-override: "PMD7_3_0"
 
