--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -14,6 +14,7 @@ alfresco:
   repository:
     endpoint: activemq:topic:alfresco.repo.event2
     discovery-endpoint: http://localhost:8080/alfresco/api/discovery
+    version: 23.2.0
   bulk-ingester:
     endpoint: activemq:queue:bulk-ingester-events
   transform:
