ACS-8460: Create test that JAMP works with Java 11

--- a/distribution/src/main/resources/docker/hxinsight-extension/Dockerfile
+++ b/distribution/src/main/resources/docker/hxinsight-extension/Dockerfile
@@ -23,6 +23,11 @@ RUN if [[ "$JAVA_VERSION" == "11" ]]; then \
       mv jdk-* /usr/lib/jvm/temurin-11-jdk && \
       update-alternatives --install /usr/bin/java java /usr/lib/jvm/temurin-11-jdk/bin/java 1 && \
       update-alternatives --remove java $(update-alternatives --display java | head -2 | tail -1 | cut -d " " -f6); \
+      echo "export JAVA_HOME=$(dirname $(dirname $(readlink -f $(type -P java))))" > /etc/profile.d/javahome.sh; \
     fi
 
-USER ${USERNAME}
+USER $USERNAME
+
+COPY java-switching-entrypoint.sh /
+ENTRYPOINT ["/java-switching-entrypoint.sh"]
+CMD ["catalina.sh", "run", "-security"]
