--- a/common-authentication/pom.xml
+++ b/common-authentication/pom.xml
@@ -13,9 +13,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <maven.build.sourceVersion>11</maven.build.sourceVersion>
-        <maven.build.targetVersion>11</maven.build.targetVersion>
-        <maven.compiler.testRelease>17</maven.compiler.testRelease>
+        <java.version>11</java.version>
+        <java.test.version>17</java.test.version>
     </properties>
 
     <dependencies>
