--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,11 @@
 
     <properties>
         <java.version>17</java.version>
-        <java.test.version>${java.version}</java.test.version>
+        <acs.java.version>${java.version}</acs.java.version>
+        <test.java.version>${java.version}</test.java.version>
         <maven.build.sourceVersion>${java.version}</maven.build.sourceVersion>
         <maven.build.targetVersion>${java.version}</maven.build.targetVersion>
-        <maven.compiler.testRelease>${java.test.version}</maven.compiler.testRelease>
+        <maven.compiler.testRelease>${test.java.version}</maven.compiler.testRelease>
         <project.scm.organization>Alfresco</project.scm.organization>
         <project.scm.repository>hxinsight-connector</project.scm.repository>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
