--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,9 @@
     <properties>
         <java.version>17</java.version>
         <repo.java.version>11</repo.java.version>
-        <test.java.version>${java.version}</test.java.version>
         <maven.build.sourceVersion>${java.version}</maven.build.sourceVersion>
         <maven.build.targetVersion>${java.version}</maven.build.targetVersion>
-        <maven.compiler.testRelease>${test.java.version}</maven.compiler.testRelease>
+        <maven.compiler.testRelease>${java.version}</maven.compiler.testRelease>
         <project.scm.organization>Alfresco</project.scm.organization>
         <project.scm.repository>hxinsight-connector</project.scm.repository>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
