--- a/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
@@ -72,14 +72,18 @@ services:
         -Dhxi.auth.providers.hyland-experience.token-uri=http://hxinsight-mock:8080/token
         -Xms1500m -Xmx1500m
         "
+    depends_on:
+      - postgres
+      - activemq
+      - transform-router
     ports:
       - "8000:8000"
     healthcheck:
       test: curl --fail http://localhost:8080/alfresco || exit 1
-      start_period: 90s
+      start_period: 45s
       interval: 10s
       timeout: 3s
-      retries: 20
+      retries: 30
 
   postgres:
     image: postgres:${POSTGRES_TAG}
@@ -118,6 +122,13 @@ services:
       ACTIVEMQ_URL: "nio://activemq:61616"
       CORE_AIO_URL: "http://transform-core-aio:8090"
       FILE_STORE_URL: "http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file"
+    depends_on:
+      - transform-core-aio
+    healthcheck:
+      test: curl --fail http://localhost:8095/ || exit 1
+      interval: 5s
+      timeout: 3s
+      retries: 20
     ports:
       - "8095:8095"
     links:
@@ -343,7 +354,10 @@ services:
         limits:
           memory: 512m
     depends_on:
-      - activemq
+      activemq:
+        condition: service_started
+      transform-router:
+        condition: service_healthy
     environment:
       JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,address=*:5007,server=y,suspend=n
       LOGGING_LEVEL_ORG_ALFRESCO: DEBUG
@@ -351,10 +365,13 @@ services:
       HYLAND-EXPERIENCE_INSIGHT_BASE-URL: http://hxinsight-mock:8080
       ALFRESCO_TRANSFORM_SHARED-FILE-STORE_HOST: http://shared-file-store
       ALFRESCO_TRANSFORM_SHARED-FILE-STORE_PORT: 8099
+      ALFRESCO_REPOSITORY_DISCOVERY-ENDPOINT: http://alfresco:8080/alfresco/api/discovery
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_CLIENT-ID: dummy-client-id
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_CLIENT-SECRET: dummy-client-pass
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_ENVIRONMENT-KEY: hxai-env-key
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_TOKEN-URI: http://localhost:8002/token
+      AUTH_PROVIDERS_ALFRESCO_USERNAME: admin
+      AUTH_PROVIDERS_ALFRESCO_PASSWORD: admin
     ports:
       - "5007:5007"
 
