--- a/distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
@@ -95,6 +95,7 @@ services:
       ACTIVEMQ_URL: "nio://activemq:61616"
       CORE_AIO_URL: "http://transform-core-aio:8090"
       FILE_STORE_URL: "http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file"
+      LOGGING_LEVEL_ORG_ALFRESCO_TRANSFORM_ROUTER: TRACE
     depends_on:
       - transform-core-aio
     healthcheck:
@@ -117,6 +118,7 @@ services:
       JAVA_OPTS: " -Xms256m -Xmx3000m"
       ACTIVEMQ_URL: "nio://activemq:61616"
       FILE_STORE_URL: "http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file"
+      LOGGING_LEVEL_ORG_ALFRESCO_TRANSFORM_BASE_TRANSFORM: TRACE
     ports:
       - "8090:8090"
     links:
