--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   alfresco:
     image: quay.io/alfresco/alfresco-content-repository-hxinsight-extension:${HXINSIGHT_CONNECTOR_TAG}
@@ -108,11 +106,13 @@ services:
         limits:
           memory: 3000m
     environment:
+      JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,address=*:5011,server=y,suspend=n"
       JAVA_OPTS: " -Xms256m -Xmx3000m"
       ACTIVEMQ_URL: "nio://activemq:61616"
       FILE_STORE_URL: "http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file"
     ports:
       - "8090:8090"
+      - "5011:5011"
     links:
       - activemq
 
