NO_JIRA: Try to fix intermittently failing tests

--- a/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
@@ -372,8 +372,12 @@ services:
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_CLIENT-SECRET: dummy-client-pass
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_ENVIRONMENT-KEY: hxai-env-key
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_TOKEN-URI: http://localhost:8002/token
-      AUTH_PROVIDERS_ALFRESCO_USERNAME: admin
-      AUTH_PROVIDERS_ALFRESCO_PASSWORD: admin
+      AUTH_PROVIDERS_ALFRESCO_CLIENT-ID: alfresco
+      AUTH_PROVIDERS_ALFRESCO_TYPE: oauth2
+      AUTH_PROVIDERS_ALFRESCO_GRANT-TYPE: password
+      AUTH_PROVIDERS_ALFRESCO_TOKEN-URI: http://${HOST_IP}:8999/auth/realms/alfresco/protocol/openid-connect/token
+      AUTH_PROVIDERS_ALFRESCO_USERNAME:
+      AUTH_PROVIDERS_ALFRESCO_PASSWORD:
     ports:
       - "5007:5007"
 
