--- a/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
@@ -121,6 +121,7 @@ services:
       CORE_AIO_URL: "http://transform-core-aio:8090"
       FILE_STORE_URL: "http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file"
       LOGGING_LEVEL_ORG_ALFRESCO_TRANSFORM_ROUTER: TRACE
+      LOGGING_LEVEL_ORG_ALFRESCO_TRANSFORM_ROUTER_MESSAGING: INFO
     depends_on:
       - transform-core-aio
     healthcheck:
