--- a/distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
@@ -96,7 +96,8 @@ services:
       LOGGING_LEVEL_ORG_ALFRESCO_TRANSFORM_ROUTER: TRACE
       LOGGING_LEVEL_ORG_ALFRESCO_TRANSFORM_ROUTER_MESSAGING: INFO
     depends_on:
-      - transform-core-aio
+      transform-core-aio:
+        condition: service_healthy
     healthcheck:
       test: curl --fail http://localhost:8095/ || exit 1
       interval: 5s
@@ -118,6 +119,11 @@ services:
       ACTIVEMQ_URL: "nio://activemq:61616"
       FILE_STORE_URL: "http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file"
       LOGGING_LEVEL_ORG_ALFRESCO_TRANSFORM_BASE_TRANSFORM: TRACE
+    healthcheck:
+      test: curl --fail http://localhost:8090/ || exit 1
+      interval: 5s
+      timeout: 3s
+      retries: 20
     ports:
       - "8090:8090"
     links:
