--- a/distribution/src/main/resources/docker/hxinsight-extension/build.properties
+++ b/distribution/src/main/resources/docker/hxinsight-extension/build.properties
@@ -1,2 +1,2 @@
-DOCKER_IMAGE_REPOSITORY=alfresco/alfresco-content-repository-hxinsight-extension
+DOCKER_IMAGE_REPOSITORY=@dist.alfresco.extended.repo.image@
 DOCKER_IMAGE_SKIP_PUSH=true
