Revert "ACS-8460: Create test that JAMP works with Java 11"
This reverts commit d8ae7173aa7858a146311df68ac8b34a46488f21.

--- a/e2e-test/pom.xml
+++ b/e2e-test/pom.xml
@@ -95,6 +95,31 @@
         </resources>
         <plugins>
             <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <configuration>
+                    <includeTypes>jar</includeTypes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>copy-resources-for-repo-container</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.alfresco</groupId>
+                                    <artifactId>alfresco-hxinsight-connector-hxinsight-extension</artifactId>
+                                    <version>${project.version}</version>
+                                    <outputDirectory>${project.build.directory}</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <executions>
                     <execution>
