--- a/common-test/src/main/resources/docker-tags.properties
+++ b/common-test/src/main/resources/docker-tags.properties
@@ -7,4 +7,4 @@ transform.router.tag=@dist.transform.router.version@
 transform.core.aio.tag=@dist.transform.core.aio.version@
 sfs.tag=@dist.transform.sfs.version@
 hxi.connector.tag=@project.parent.version@
-extended.repo.image=quay.io/@dist.alfresco.extended.repo.image@
+repository.extension=@dist.alfresco.repo.extension@
