--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,8 +13,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <maven.build.sourceVersion>${repo.java.version}</maven.build.sourceVersion>
-        <maven.build.targetVersion>${repo.java.version}</maven.build.targetVersion>
+        <maven.build.sourceVersion>${repository.java.version}</maven.build.sourceVersion>
+        <maven.build.targetVersion>${repository.java.version}</maven.build.targetVersion>
     </properties>
 
     <dependencies>
