--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <repo.java.version>11</repo.java.version>
+        <repository.java.version>11</repository.java.version>
         <maven.build.sourceVersion>${java.version}</maven.build.sourceVersion>
         <maven.build.targetVersion>${java.version}</maven.build.targetVersion>
         <maven.compiler.testRelease>${java.version}</maven.compiler.testRelease>
